Fix panel border on small screens

--- a/src/main.css
+++ b/src/main.css
@@ -50,12 +50,17 @@ main {
 #panel {
   flex-basis: 400px;
   padding: 1rem;
-  border-left: 1px solid black;
+  border-top: 1px solid black;
 }
 
 @media (min-width: 768px) {
   main {
     flex-direction: row;
+  }
+
+  #panel {
+    border: 0;
+    border-left: 1px solid black;
   }
 }
 
